--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://59.110.141.166:3306/lims?characterEncoding=UTF-8
-spring.datasource.username=srms
-spring.datasource.password=srms
+spring.datasource.url=jdbc:mysql://59.110.141.166:3306/mytest?characterEncoding=UTF-8
+spring.datasource.username=llchao
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #热部署
